Fixes as per comments on PR
Please be aware that this will break the build in Jenkins as there are some Sonar code
smells that are very hard to get rid of.